--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ button {
 
 @font-face {
     font-family: digitalClock;
-    src: url("/assets/fonts/digital-7\ \(italic\).ttf");
+    src: url("/assets/fonts/digital-7 (italic).ttf");
 }
 
 p {
