--- a/style.css
+++ b/style.css
@@ -1,16 +1,28 @@
 html {
     background-color: #EEEEEE;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     max-width: 1080px;
     margin: auto;
-    gap: 70px;
-    margin-top: 200px;
     
+}
+
+.main {
+   
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 75vh;
+        min-height: 500px;
+        padding: 10px;
+        margin-top: 50px;
 }
 
 
